// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot test event match snapshot 1`] = `
[
  {
    "desc": "it is a mock api",
    "name": "login api",
    "scenarios": [
      {
        "desc": "login success",
        "name": "scenario 1",
        "return": {
          "code": 0,
          "data": {
            "username": "admin",
          },
        },
      },
      {
        "desc": "login failure",
        "error": {
          "code": 1,
          "message": "password incorrect",
        },
        "name": "scenario 2",
      },
    ],
    "target": [Function],
    "timeStamp": 0,
    "type": "Register/asyncFn",
  },
]
`;

exports[`snapshot test event match snapshot 2`] = `
[
  {
    "pass": [Function],
    "reject": [Function],
    "resolve": [Function],
    "rule": {
      "desc": "it is a mock api",
      "name": "login api",
      "scenarios": [
        {
          "desc": "login success",
          "name": "scenario 1",
          "return": {
            "code": 0,
            "data": {
              "username": "admin",
            },
          },
        },
        {
          "desc": "login failure",
          "error": {
            "code": 1,
            "message": "password incorrect",
          },
          "name": "scenario 2",
        },
      ],
      "target": [Function],
      "timeStamp": 0,
      "type": "Register/asyncFn",
    },
    "target": [Function],
    "timeStamp": 0,
    "type": "Run/asyncFn/before",
  },
]
`;
